--- a/docs/documentationStyles.css
+++ b/docs/documentationStyles.css
@@ -11,23 +11,29 @@
     overflow-x: hidden;
     padding-top: 2%;
     padding-left: 3%;
+    color:#fff;
   }
 
   .sidenav a {
     text-decoration: none;
-    font-size: 20px;
-    color: #818181;
+    font-size: 16px;
+    color: #fff;
     display: block;
   }
 
   .sidenav a:hover {
-    color: #f1f1f1;
+    color: #ccc;
   }
 
   .sidenav h1{
-      color: #f1f1f1;
+      color: #fff;
   }
 
+  .sidenav button{
+    background-color: #111;
+    border: none;
+    text-align: left;
+  }
   .main {
     width: 75%;
     float: right;
@@ -44,10 +50,9 @@
   }
 
   .accordion {
-    background-color: #eee;
-    color: #444;
+    background-color: #111;
+    color: #fff;
     cursor: pointer;
-    padding: 18px;
     width: 100%;
     text-align: left;
     border: none;
@@ -55,13 +60,22 @@
     transition: 0.4s;
   }
 
-  .active, .accordion:hover {
-    background-color: #ccc;
+  .active {
+    background-color: #fff;
+    color:#fff;
+    font-style: bold;
+  }
+
+  .accordion:hover {
+    background-color: #fff;
+    color:#fff;
+    font-style: bold;
   }
 
   .panel {
-    padding: 0 18px;
-    background-color: white;
+    padding: 0;
+    background-color: #3c3c3c;
+    color: #fff;
     display: none;
     overflow: hidden;
   }
