--- a/docs/documentationStyles.css
+++ b/docs/documentationStyles.css
@@ -3,7 +3,7 @@
 
 .sidenav {
     height: 100%;
-    width: 20%;
+    width: 25%;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -34,9 +34,10 @@
     background-color: #111;
     border: none;
     text-align: left;
+    padding-top: 10px;
   }
   .main {
-    width: 75%;
+    width: 70%;
     float: right;
   }
 
@@ -61,15 +62,15 @@
     transition: 0.4s;
   }
 
-  .active {
+  .sidenav button.active {
     background-color: #fff;
-    color:#fff;
+    color:#111;
     font-style: bold;
   }
 
   .accordion:hover {
     background-color: #fff;
-    color:#fff;
+    color:#111;
     font-style: bold;
   }
 
