--- a/docs/documentationStyles.css
+++ b/docs/documentationStyles.css
@@ -86,6 +86,10 @@
     overflow: hidden;
   }
 
+  ol {
+    list-style-type: none !important;
+  }
+
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 15px;}
