--- a/docs/documentationStyles.css
+++ b/docs/documentationStyles.css
@@ -95,6 +95,10 @@
       width: 100%;
   }
 
+  .imageContent{
+      border: none;
+  }
+
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 15px;}
