--- a/docs/documentationStyles.css
+++ b/docs/documentationStyles.css
@@ -44,6 +44,7 @@
   .main {
     width: 70%;
     float: right;
+    padding-right: 3%;
   }
 
   .navLevel2{
@@ -97,6 +98,14 @@
 
   .imageContent{
       border: none;
+  }
+
+  #table1 {
+      border: 2px solid #000;
+  }
+
+  #table1 tr:nth-child(odd){
+    background-color: #c3c3c3;
   }
 
   @media screen and (max-height: 450px) {
