--- a/docs/documentationStyles.css
+++ b/docs/documentationStyles.css
@@ -107,6 +107,59 @@
   #table1 tr:nth-child(odd){
     background-color: #c3c3c3;
   }
+  .withoutBorder{
+    border: none;
+  }
+  
+  .withoutBorder tr{
+    border: none;
+  }
+
+  .withoutBorder td{
+    border: none;
+  }
+
+  .listTitle{
+    
+  }
+
+  .listBullet{
+    padding-left: 3%;
+  }
+
+  .listBullet::before {
+    content:"● ";
+  }
+
+  .additionalInfo {
+    background-color: #FFD77C;
+    padding: 3px;
+    padding-left: 5px;
+    border-radius: 5px;
+    max-width: 95%;
+  }
+
+  .additionalInfo img{
+    padding-left: 15px !important;
+    width: 50px !important;
+  }
+
+  .sourceCode {
+    background: #f4f4f4;
+    border: 1px solid #ddd;
+    border-left: 3px solid #f36d33;
+    color: #666;
+    page-break-inside: avoid;
+    font-family: monospace;
+    font-size: 15px;
+    line-height: 1.6;
+    margin-bottom: 1.6em;
+    max-width: 90%;
+    overflow: auto;
+    padding: 1em 1.5em;
+    display: block;
+    word-wrap: break-word;
+}
 
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
