Add bullets styles

--- a/docs/documentationStyles.css
+++ b/docs/documentationStyles.css
@@ -163,7 +163,11 @@
 }
 
 .mainBullet{
-    color: red;
+
+}
+
+.secondaryBullet{
+    margin-left: 1%;
 }
 
   @media screen and (max-height: 450px) {
