--- a/docs/documentationStyles.css
+++ b/docs/documentationStyles.css
@@ -118,12 +118,21 @@ h5{
   }
 
   #table1 {
-      border: 2px solid #000;
+      border: 2px solid #c3c3c3;
+  }
+
+  #table1 td{
+    border: 1px solid #c3c3c3;
   }
 
   #table1 tr:nth-child(odd){
-    background-color: #c3c3c3;
+    background-color: #e0e0e0;
   }
+
+  #table1 tr:first-child{
+    font-weight: bold;
+}
+
   .withoutBorder{
     border: none;
   }
