--- a/docs/documentationStyles.css
+++ b/docs/documentationStyles.css
@@ -24,7 +24,6 @@ h5{
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
     overflow-x: hidden;
     padding-top: 2%;
     padding-left: 3%;
@@ -35,25 +34,26 @@ h5{
   .sidenav a {
     text-decoration: none;
     font-size: 16px;
-    color: #fff;
+    color: #111;
     display: block;
   }
 
   .active a {
-    color: #000;
+    color: #AED684;
   }
 
   .sidenav a:hover {
-    color: #ccc;
+    color: #2DAAE2;
   }
 
   .sidenav h1{
-      color: #fff;
+      color: #235AA6;
       padding-right: 3%;
+      padding-bottom: 10px;
+      border-bottom: 2px solid #235AA6;
   }
 
   .sidenav button{
-    background-color: #111;
     border: none;
     text-align: left;
     padding-top: 10px;
@@ -75,8 +75,7 @@ h5{
   }
 
   .accordion {
-    background-color: #111;
-    color: #fff;
+    color: #111;
     cursor: pointer;
     width: 100%;
     text-align: left;
@@ -99,7 +98,6 @@ h5{
 
   .panel {
     padding: 0;
-    background-color: #3c3c3c;
     color: #fff;
     display: none;
     overflow: hidden;
