--- a/docs/documentationStyles.css
+++ b/docs/documentationStyles.css
@@ -17,6 +17,26 @@ h5{
     color: #235AA6;
 }
 
+#menu::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px #AED684;
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+#menu::-webkit-scrollbar
+{
+	width: 8px;
+	background-color: #F5F5F5;
+}
+
+#menu::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-color: #AED684;
+}
+
+
 .sidenav {
     height: 100%;
     width: 25%;
@@ -34,7 +54,7 @@ h5{
   .sidenav a {
     text-decoration: none;
     font-size: 16px;
-    color: #111;
+    color: #235AA6;
     display: block;
   }
 
@@ -57,6 +77,7 @@ h5{
     border: none;
     text-align: left;
     padding-top: 10px;
+    color: #235AA6;
   }
   .main {
     width: 70%;
@@ -85,7 +106,7 @@ h5{
   }
 
   .sidenav button.active {
-    background-color: #fff;
+    background-color: #AED684;
     color:#111;
     font-style: bold;
   }
@@ -101,7 +122,7 @@ h5{
     color: #fff;
     display: none;
     overflow: hidden;
-    background-color: #c3c3c3;
+    background-color: #AED684;
   }
 
   ol {
